<resources>
    <string name="app_name">Equal Audio Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">PlayList</string>
    <string name="back_btn">Back</string>
    <string name="world_of_music">World of Music</string>
    <string name="image">Image</string>
    <string name="song_name">Song Name</string>
    <string name="next_btn">Next</string>
    <string name="pause_btn">Pause</string>
    <string name="time_start">00:00</string>
    <string name="time_end">Loading ..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_logo">Logo</string>
    <string name="nav_title">Welcome to \nEqual Audio Player</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search">Search</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playList_img">Playlist Image</string>
    <string name="playlist_delete">Delete</string>
    <string name="person_name">Person Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="feedback_topic">Topic i.e. Suggestion, Error, etc</string>
    <string name="feedback_email">Email Address (Optional)</string>
    <string name="feedback_send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>
</resources>