<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".activities.FeedbackActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_topic_FA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/feedback_topic"
        android:gravity="center|start"
        android:inputType="textEmailSubject"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email_FA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/feedback_email"
        android:gravity="center|start"
        android:inputType="textEmailAddress"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_Msg_FA"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:hint="@string/feedback"
        android:gravity="center|start"
        android:inputType="text"/>

    <Button
        android:id="@+id/btn_send_FA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/feedback_send"
        android:layout_gravity="center"
        android:textColor="@color/black"/>
</LinearLayout>