<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_theme"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_pink_SA"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            app:tint="@color/cool_pink"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_blue_SA"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            app:tint="@color/cool_blue"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_purple_SA"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            app:tint="@color/purple_500"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_green_SA"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            app:tint="@color/cool_green"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_black_SA"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            app:tint="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:background="@color/white"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_sort_by_SA"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_sort"
            android:padding="5dp"
            app:tint="@color/cool_pink"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_version_name_SA"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/version_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:padding="16dp"
        android:background="@color/white"/>
</LinearLayout>